--- a/config.env
+++ b/config.env
@@ -1,9 +1,9 @@
 #内核源码地址
-KERNEL_SOURCE=https://github.com/Pierre2324/NGK_android_kernel_xiaomi_sm8250
+KERNEL_SOURCE=https://github.com/Djmzk/android_kernel_gki_marble
 #内核源码分支
-KERNEL_SOURCE_BRANCH=t-caf
+KERNEL_SOURCE_BRANCH=main
 #内核编译配置
-KERNEL_CONFIG=lmi_defconfig
+KERNEL_CONFIG=gki_defconfig
 #内核Image.gz-dtb or Image
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
@@ -40,9 +40,9 @@ r475365b      r450784d                               r399163b                   
 r487747c      r450784e                               r416183b                                r416183b
 r498229
 #分支
-CLANG_BRANCH=android-msm-bonito-4.9-android12-qpr1
+CLANG_BRANCH=main
 #版本
-CLANG_VERSION=r399163b
+CLANG_VERSION=r510928
 
 # 编译器GCC
 ENABLE_GCC_ARM64=true
@@ -62,7 +62,7 @@ ANDROID_PARANOID_NETWORK_OFF=true
 #######################################################################################################################################################
 
 # 开启 KernelSU flags
-ENABLE_KERNELSU=true
+ENABLE_KERNELSU=false
 KERNELSU_TAG=main
 
 # 额外配置 Configuration
@@ -73,7 +73,7 @@ ADD_OVERLAYFS_CONFIG=true
 
 ########################################################################################################################################################
 # 开启 KVM 配置
-ENABLE_KVM=false
+ENABLE_KVM=true
 
 
 ########################################################################################################################################################
@@ -86,5 +86,5 @@ ENABLE_CCACHE=false
 NEED_DTBO=false
 
 # 构建内核直链接Build boot images
-BUILD_BOOT_IMG=true
+BUILD_BOOT_IMG=false
 SOURCE_BOOT_IMAGE=https://udomain.dl.sourceforge.net/project/evolution-x/fajita/13/boot/boot.img
