--- a/.github/workflows/zbuild-kernel.yml
+++ b/.github/workflows/zbuild-kernel.yml
@@ -214,6 +214,7 @@ jobs:
     - name: 开始编译内核
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
+        git clone https://github.com/tiann/KernelSU
         export PATH=$GITHUB_WORKSPACE/kernel_workspace/clang-aosp/bin:$PATH
         export KBUILD_BUILD_HOST=Github-Action
         export KBUILD_BUILD_USER=$(echo ${{ github.actor }} | tr A-Z a-z)
