--- a/config.env
+++ b/config.env
@@ -19,7 +19,7 @@ METHOD_OK=A
 
 
 # 编译器选择'true'将使用自定义编译器Clang  'false'将使用编译器AOSP
-USE_CUSTOM_CLANG=true
+USE_CUSTOM_CLANG=false
 
 # python切换默认python3(ture将切换到python2)
 CUT_PYTHON=false
@@ -42,7 +42,7 @@ r498229
 #分支
 CLANG_BRANCH=main
 #版本
-CLANG_VERSION=r510928
+CLANG_VERSION=r475365b
 
 # 编译器GCC
 ENABLE_GCC_ARM64=true
